added Rhubarb Pie image to webpage

--- a/recipes/rhubarb.html
+++ b/recipes/rhubarb.html
@@ -7,12 +7,13 @@
 
 <body>
     <h1>Rhubarb Pie</h1>
+    <img src="rhubarbpie.jpg" alt="rhubarb pie" height="500" width="500">
 
 
 
 
 
-    
+
 </body>
 
 
