added steps and instructions to rhubarb page

--- a/recipes/rhubarb.html
+++ b/recipes/rhubarb.html
@@ -9,6 +9,33 @@
     <h1>Rhubarb Pie</h1>
     <img src="rhubarbpie.jpg" alt="rhubarb pie" height="500" width="500">
 
+    <h2>Description</h2>
+    <p>Easy Rhubarb Pie recipe that is <em>tangy</em>, <em>buttery</em> and <strong>delicious</strong>. Great with a scoop of vanilla icecream!</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 cups of Rhubarb</li>
+        <li>1 cup of Sugar</li>
+        <li>1 cup of Brown Sugar</li>
+        <li>1/2 cup of Butter</li>
+        <li>1 Pie Crust</li>
+    </ul>
+
+    <h4>Steps</h4>
+    <ol>
+        <li>Preheat oven to <strong>400</strong> degrees F (204) C</li>
+        <li>Line your pie crust in your pie dish and brush with butter</li>
+        <li>Combine rhubarb, sugar, brown sugar in mixing bowl</li>
+        <li>Pour mixture into pie crust</li>
+        <li>cover with pie crust and sprinkle brown sugar on top</li>
+        <li>Bake for <strong>20 minutes</strong></li>
+        <li>Reduce heat to 350 F (177 C) after 20 minutes and bake for <em>additional</em> <strong>30 minutes</strong></li>
+        <li>Let cool for 1 hour before serving</li>
+
+
+
+    </ol>
+
 
 
 
