--- a/recipes/shortbread.html
+++ b/recipes/shortbread.html
@@ -7,6 +7,9 @@
 
 <body>
     <h1>Whipped Shortbread</h1>
+    <img src="shortbread.jpg" alt="shortbread" height="400" width="600">
+
+    <h2>Description</h2>
     <p></p>
 
 
