Added Ingredient and Steps to Whipped Shortbread

--- a/recipes/shortbread.html
+++ b/recipes/shortbread.html
@@ -10,8 +10,25 @@
     <img src="shortbread.jpg" alt="shortbread" height="400" width="600">
 
     <h2>Description</h2>
-    <p></p>
+    <p><strong>Simple</strong>, <strong>quick</strong> and <strong>fluffy</strong> shortbread that will melt in your mouth. Perfect for the holidays and pairs great with coffee or tea!</p>
 
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 cup of Butter</li>
+        <li>1 and a 1/2 cup of Flour</li>
+        <li>1/2 cup of Icing Sugar</li>
+    </ul>
+
+    <h4>Steps</h4>
+    <ol>
+        <li>Preheat oven to <strong>325 F (160 C)</strong></li>
+        <li>Combine Butter, Sugar and Flour</li>
+        <li>Mix with electric mixer for <strong>10 minutes</strong> until light and fluffy</li>
+        <li>Drop by teaspoon or icing bag onto baking sheet</li>
+        <li>Bake at 325 F (160 C) for <strong>15-20</strong>minutes or until lightly browned</li>
+        <li>remove and place on counter or rack to cool</li>
+
+    </ol>
 
 
 
