included popcorn image details and heading

--- a/recipes/popcorn.html
+++ b/recipes/popcorn.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Caramel Popcorn</h1>
-        <img src="popcorn.jpg">
+        <img src="popcorn.jpg" alt="popcorn" height="500" width="600"
     </body>
 
 
