Added Ingredients and Steps to the Popcorn page

--- a/recipes/popcorn.html
+++ b/recipes/popcorn.html
@@ -7,7 +7,36 @@
 
     <body>
         <h1>Caramel Popcorn</h1>
-        <img src="popcorn.jpg" alt="popcorn" height="500" width="600"
+        <img src="popcorn.jpg" alt="popcorn" height="500" width="600">
+
+        <h2>Description</h2>
+        <p>Delicious caramel covered popcorn to satisfy that sweet tooth!</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 cup of Popcorn</li>
+            <li>1 cup of Butter</li>
+            <li>1 cup of Brown Sugar</li>
+            <li>1/2 cup of Corn Syrup</li>
+            <li>1 tsp of Baking Soda</li>
+        </ul>
+
+        <h4>Steps</h4>
+        <ol>
+            <li>Pour Corn Syrup into pot and bring to a boil</li>
+            <li>Add Baking Soda to oil</li>
+            <li>Add Brown Sugar and Butter</li>
+            <li>Mix constantly and add your popcorn into the mixture</li>
+            <li>Keep stirring until the foam cooks down</li>
+            <li>Once golden brown colour remove from heat</li>
+            <li>Pour mixture onto baking pan</li>
+            <li>Bake for <strong>45 min at 250 F (121 C)</strong></li>
+        </ol>
+
+
+
+
+
     </body>
 
 
